--- a/index.html
+++ b/index.html
@@ -3,102 +3,125 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>بسیج دانشجویی دانشگاه شهید برونسی</title>
+  <title>بسیج دانشجویی نیشابور حوزه شهید برونسی</title>
   <style>
     body {
       font-family: Tahoma, sans-serif;
       margin: 0;
       padding: 0;
       direction: rtl;
-      background: #f4f6f9;
+      background: #e0e0e0;
       color: #333;
     }
     header {
-      background: #0b6623;
-      color: white;
+      background: #f8f8f8;
       padding: 20px;
       text-align: center;
+      border-bottom: 3px solid #0b6623;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 24px;
+    }
+    .allah {
+      margin: 10px auto;
+      width: 50px;
+      height: 60px;
     }
     nav {
-      background: #084c1e;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
+      position: fixed;
+      right: 0;
+      top: 100px;
+      width: 180px;
+      background: #dcdcdc;
+      border-radius: 15px 0 0 15px;
+      box-shadow: -2px 2px 8px rgba(0,0,0,0.2);
       padding: 10px;
     }
     nav a {
-      color: white;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      margin: 10px 0;
+      color: #000;
       text-decoration: none;
       font-weight: bold;
     }
     nav a:hover {
-      text-decoration: underline;
+      color: #0b6623;
     }
     main {
+      margin-right: 200px;
       padding: 20px;
-      max-width: 1000px;
-      margin: auto;
     }
     .card {
-      background: white;
-      margin: 15px 0;
+      display: none;
+      background: #fff;
       padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      border-radius: 15px;
+      margin-bottom: 20px;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.1);
     }
-    .card h2 {
-      margin-top: 0;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-    input, textarea, button {
-      padding: 10px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      font-family: inherit;
-    }
-    button {
-      background: #0b6623;
-      color: white;
-      border: none;
-      cursor: pointer;
-      font-weight: bold;
-    }
-    button:hover {
-      background: #09531c;
+    .card.active {
+      display: block;
     }
     footer {
       text-align: center;
-      background: #222;
+      background: #444;
       color: white;
-      padding: 15px;
-      margin-top: 20px;
+      padding: 10px;
+      border-radius: 15px 15px 0 0;
+    }
+    .top-images {
+      display: flex;
+      justify-content: space-between;
+      padding: 0 20px;
+    }
+    .top-images img {
+      width: 80px;
+      height: auto;
+      border-radius: 50%;
+      border: 2px solid #0b6623;
     }
   </style>
 </head>
 <body>
+  <div class="top-images">
+    <img src="khomeini.jpg" alt="Imam Khomeini">
+    <img src="khamenei.jpg" alt="Ayatollah Khamenei">
+  </div>
   <header>
-    <h1>بسیج دانشجویی دانشگاه شهید برونسی</h1>
+    <h1>بسم الله الرحمن الرحیم</h1>
+    <svg class="allah" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+      <text x="50%" y="50%" text-anchor="middle" dominant-baseline="central" font-size="36" fill="red">الله</text>
+    </svg>
+    <h2>بسیج دانشجویی نیشابور حوزه شهید برونسی</h2>
   </header>
+
   <nav>
-    <a href="#">خانه</a>
-    <a href="#">گزارش‌ها</a>
-    <a href="#">اطلاعیه‌ها</a>
-    <a href="#signup">ثبت‌نام</a>
-    <a href="#contact">ارتباط با ما</a>
+    <a href="#" onclick="showSection('home')">🏠 خانه</a>
+    <a href="#" onclick="showSection('reports')">📑 گزارش‌ها</a>
+    <a href="#" onclick="showSection('notices')">📢 اطلاعیه‌ها</a>
+    <a href="#" onclick="showSection('signup')">📝 ثبت‌نام</a>
+    <a href="#" onclick="showSection('contact')">📞 ارتباط با ما</a>
   </nav>
+
   <main>
-    <div class="card">
-      <h2>گزارش روز</h2>
-      <p>در این بخش گزارش‌های روزانه بسیج دانشجویی منتشر می‌شود.</p>
+    <div class="card active" id="home">
+      <h2>خانه</h2>
+      <p>به پایگاه بسیج دانشجویی خوش آمدید.</p>
     </div>
-    <div class="card">
+
+    <div class="card" id="reports">
+      <h2>گزارش‌ها</h2>
+      <p>اینجا گزارش فعالیت‌ها منتشر می‌شود.</p>
+    </div>
+
+    <div class="card" id="notices">
       <h2>اطلاعیه‌ها</h2>
-      <p>آخرین اطلاعیه‌ها و اخبار در این بخش قرار خواهد گرفت.</p>
+      <p>اینجا اطلاعیه‌های بسیج درج خواهد شد.</p>
     </div>
+
     <div class="card" id="signup">
       <h2>ثبت‌نام</h2>
       <form>
@@ -108,13 +131,26 @@
         <button type="submit">ارسال</button>
       </form>
     </div>
+
     <div class="card" id="contact">
       <h2>ارتباط با ما</h2>
-      <p>برای ارتباط با بسیج دانشجویی می‌توانید از طریق ایمیل و شبکه‌های اجتماعی اقدام کنید.</p>
+      <p>📱 شماره: 09909951792</p>
+      <p>☎️ تلفن: 051-43305000</p>
+      <p>📨 تلگرام: <a href="https://t.me/paygah_pardis">@paygah_pardis</a></p>
     </div>
   </main>
+
   <footer>
-    <p>کلیه حقوق محفوظ است – بسیج دانشجویی دانشگاه شهید برونسی</p>
+    <p>کلیه حقوق محفوظ است – بسیج دانشجویی نیشابور حوزه شهید برونسی</p>
   </footer>
+
+  <script>
+    function showSection(id) {
+      document.querySelectorAll('.card').forEach(card => {
+        card.classList.remove('active');
+      });
+      document.getElementById(id).classList.add('active');
+    }
+  </script>
 </body>
 </html>
