--- a/index.html
+++ b/index.html
@@ -1,46 +1,15 @@
+
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>بسیج دانشجویی نیشابور | حوزه شهید برونسی</title>
-  <link rel="stylesheet" href="style.css">
+  <title>بسیج دانشجویی</title>
 </head>
-<body>
-  <header>
-    <div class="header-images">
-      <img src="assets/khamenei.png" alt="رهبر انقلاب" class="leader-img left">
-      <img src="assets/allah.png" alt="نماد الله" class="allah-icon">
-      <img src="assets/khomeini.png" alt="امام خمینی" class="leader-img right">
-    </div>
-    <h1>بسم الله الرحمن الرحیم</h1>
-    <h2>بسیج دانشجویی نیشابور | حوزه شهید برونسی</h2>
-  </header>
-
-  <nav>
-    <ul>
-      <li><a href="#">خانه</a></li>
-      <li><a href="#">گزارش‌ها</a></li>
-      <li><a href="#">اطلاعیه‌ها</a></li>
-      <li><a href="#">ثبت‌نام</a></li>
-      <li><a href="#">ارتباط با ما</a></li>
-    </ul>
-  </nav>
-
-  <main>
-    <section class="form-section">
-      <h3>فرم ثبت‌نام</h3>
-      <form action="https://script.google.com/macros/s/AKfycbxFcM_4oE9o_1T1_42rAtQYHrwKLFFZMmutM6ueWNE438Fpj3Ot6n2R1U7Q-cumdxv4/exec" method="post">
-        <input type="text" name="name" placeholder="نام و نام خانوادگی" required>
-        <input type="text" name="code" placeholder="کد ملی" required>
-        <input type="text" name="phone" placeholder="شماره تماس" required>
-        <input type="text" name="reshte" placeholder="رشته تحصیلی" required>
-        <button type="submit">ارسال</button>
-      </form>
-    </section>
-  </main>
-
-  <footer>
-    <p>به‌روز رسانی سایت / 8 / 6 / 1404</p>
-  </footer>
+<body style="text-align:center; font-family:Tahoma;">
+  <h2>بسیج دانشجویی | حوزه شهید برونسی</h2>
+  <img src="images/rahbar.png" alt="رهبر انقلاب" width="150"><br>
+  <img src="images/khomeini.png" alt="امام خمینی" width="150"><br>
+  <img src="images/emblem.png" alt="نماد جمهوری اسلامی" width="150"><br>
+  <p>به روز رسانی سایت /8/6/1404</p>
 </body>
 </html>
